<?xml version="1.0"?>
<package>
  <name>hector_tracker_gazebo_launch</name>
  <version>0.0.0</version>
  <description>The hector_tracker_gazebo_launch package</description>

  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>
  
  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>

  <license>LGPL v3</license>
  
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>hector_tracker_description</build_depend>
  <build_depend>hector_tracker_gazebo_ros_control</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>hector_tracker_description</run_depend>
  <run_depend>hector_tracker_gazebo_ros_control</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>